--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="title">Code_X</h1>
         <hr>
     </header>
-    <form id="screen-full">
+    <form id="screen-full" onsubmit="validationForm">
 
         
         <div id="inputs_container">
