--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <header id="screen-top">
+
         <hr>
         <h1 class="title">Code_X</h1>
         <hr>
+        
     </header>
-    <form id="screen-full" onsubmit="validationForm">
-
+    <form id="screen-full">
         
         <div id="inputs_container">
 
