--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <hr class="top">
 
     </header>
-    <form id="screen-full">
+    <form method="post" id="screen-full">
         
         <div id="inputs_container">
 
